--- a/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem.csproj
+++ b/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CmaxEstimation.cs" />
+    <Compile Include="ConsString.cs" />
+    <Compile Include="Entries_to_delete.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,8 +56,11 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GreedyHeuristic.cs" />
+    <Compile Include="Ones_entries.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result_permutation_for_row.cs" />
+    <Compile Include="Row.cs" />
     <Compile Include="TabuSearch.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
