--- a/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem.csproj
+++ b/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem/TabuSearchForConsOnesProblem.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="CmaxEstimation.cs" />
     <Compile Include="ConsString.cs" />
+    <Compile Include="CurrentMatrix.cs" />
+    <Compile Include="CurrentResult.cs" />
+    <Compile Include="DiversifyingMovements.cs" />
     <Compile Include="Entries_to_delete.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -56,6 +59,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GreedyHeuristic.cs" />
+    <Compile Include="MovedColumnAndNeighborhood.cs" />
+    <Compile Include="CurrentMatrixAndColumnsPositions.cs" />
+    <Compile Include="OnesCount.cs" />
     <Compile Include="Ones_entries.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
