--- a/ConOnesProject/ConOnesProject.csproj
+++ b/ConOnesProject/ConOnesProject.csproj
@@ -90,6 +90,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomMatrix.cs" />
+    <Compile Include="TabuSearchAlgorithmForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TabuSearchAlgorithmForm.Designer.cs">
+      <DependentUpon>TabuSearchAlgorithmForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddMatrixFromFileForm.resx">
       <DependentUpon>AddMatrixFromFileForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +123,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TabuSearchAlgorithmForm.resx">
+      <DependentUpon>TabuSearchAlgorithmForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
