--- a/ConOnesProject/ConOnesProject.csproj
+++ b/ConOnesProject/ConOnesProject.csproj
@@ -107,7 +107,20 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomMatrix.cs" />
+    <Compile Include="ReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm.Designer.cs">
+      <DependentUpon>ReportForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ResultMatrix.cs" />
     <Compile Include="Row.cs" />
+    <Compile Include="SaveMatrixInFileForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SaveMatrixInFileForm.Designer.cs">
+      <DependentUpon>SaveMatrixInFileForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TabuSearchAlgorithmForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +157,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReportForm.resx">
+      <DependentUpon>ReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SaveMatrixInFileForm.resx">
+      <DependentUpon>SaveMatrixInFileForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TabuSearchAlgorithmForm.resx">
       <DependentUpon>TabuSearchAlgorithmForm.cs</DependentUpon>
     </EmbeddedResource>
